fixing collecting to list