@@ -51,7 +51,7 @@ public class DoctorController {
         if (totalPages > 0) {
             List<Integer> pageNumbers = IntStream.rangeClosed(1, totalPages)
                     .boxed()
-                    .collect(Collectors.toList());
+                    .toList();
             model.addAttribute("pageNumbers", pageNumbers);
         }
 
